--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/book1.jpg" class="d-block w-100" alt="...">
+                <img src="img/sofa1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/book2.jpg" class="d-block w-100" alt="...">
+                <img src="img/sova2.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/book3.jpg" class="d-block w-100" alt="...">
+                <img src="img/sofa3.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -44,7 +44,7 @@
     <div class="container">
         <div class="row"> <!-- Buat dulu row nya-->
             <div class="col">
-                <h1 class="text-center mt-5 mb-5">DAFTAR Furnitur</h1>
+                <h1 class="text-center mt-5 mb-5">Daftar Furnitur</h1>
             </div>
         </div>
         <div class="row">
@@ -63,11 +63,10 @@
             <div class="col-3"> <!-- TEmpat naruh card dari bootstrapnya -->
 
                 <div class="card" style="width: 18rem;">
-                    <img src="img/buku/buku3.jpg" class="card-img-top" alt="...">
+                    <img src="img/sofa2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Komik Me vs Big Slacker Baby Volume 3</h5>
-                        <p class="card-text">rin dan Alvan sudah memasuki tingkat terakhir kelas XII. Arin kebingungan
-                            ingin melanjutkan ke universitas mana dan jurusan apa</p>
+                        <h5 class="card-title">Sofa Premium Merah Velvet</h5>
+                        <p class="card-text">Harga Rp.14,000,000.00</p>
                         <a href="#" class="btn btn-primary">Lihat Detail</a>
                     </div>
                 </div>
