--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <img src="img/sofa4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">
-                            Love Letter Komik Reon</h5>
-                        <p class="card-text">Love Letter Komik Reon.</p>
+                           Sofa Bentuk L Warna Grey</h5>
+                        <p class="card-text">Harga Rp.7,000,000.00</p>
                         <a href="#" class="btn btn-primary">Lihat Detail</a>
                     </div>
                 </div>
@@ -90,12 +90,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="img/sofa5.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Komik Nusa Five Volume 2 oleh Sweta Kartika Nusa V Nusantaranger</h5>
-                        <p class="card-text">Komik Nusa Five Volume 2 oleh Sweta Kartika Nusa V Nusantaranger
-
-                            Segera terbit Nusa Five volume kedua dengan 12 halaman tambahan!
-
-                            Dengan chakra energi pemberian Pandita, </p>
+                        <h5 class="card-title">Sofa 3-Seater Warna Grey</h5>
+                        <p class="card-text">Harga Rp.6,000,000.00</p>
                         <a href="#" class="btn btn-primary">Lihat Detail</a>
                     </div>
                 </div>
