--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" width="1200px" height="400px">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" width="1200" height="400">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="img/sofa1.jpg" class="d-block w-100" alt="...">
