--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 <body>
     <!-- Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" width="1200" height="400">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/sofa1.jpg" class="d-block w-100" alt="...">
+                <img src="img/sofa1.jpg" class="d-block w-100" width="1200" height="400" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/sova2.jpg" class="d-block w-100" alt="...">
+                <img src="img/sova2.jpg" class="d-block w-100" width="1200" height="400" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/sofa3.jpg" class="d-block w-100" alt="...">
+                <img src="img/sofa3.jpg" class="d-block w-100" width="1200" height="400" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
