--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
 <body>
     <!-- Carousel -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="w-75 p-3" class="h-75 d-inline-block">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/sofa1.jpg" class="d-block w-100" width="1200" height="400" alt="...">
+                <img src="img/sofa1.jpg" class="d-block w-100"  alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/sova2.jpg" class="d-block w-100" width="1200" height="400" alt="...">
+                <img src="img/sova2.jpg" class="d-block w-100"  alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/sofa3.jpg" class="d-block w-100" width="1200" height="400" alt="...">
+                <img src="img/sofa3.jpg" class="d-block w-100"  alt="...">
             </div>
         </div>
+    </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
