--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="col-3"> <!-- TEmpat naruh card dari bootstrapnya -->
 
                 <div class="card" style="width: 18rem;">
-                    <img src="img/sofa5.jpg" class="card-img-top" alt="...">
+                    <img src="img/sofa5.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Sofa 3-Seater Warna Grey</h5>
                         <p class="card-text">Harga Rp.6,000,000.00</p>
