--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Carousel -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="w-50 p-3" class="h-75 d-inline-block">
+    <div style="width: 1200px" style="height: 400px" class="h-75 d-inline-block" class="mx-auto">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="img/sofa1.jpg" class="d-block w-100"  alt="...">
