--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <!-- Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div style="width: 1200px" style="height: 400px" class="mx-auto">
+    <div id="carouselExampleControls" class="mx-auto" class="carousel slide" data-bs-ride="carousel">
+    <div style="width: 1200px" style="height: 400px">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="img/sofa1.jpg" class="d-block w-100"  alt="...">
