--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="img/sofa1.jpg" class="d-block w-100"  alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/sova2.jpg" class="d-block w-100"  alt="...">
+                <img src="img/sofa2.jpg" class="d-block w-100"  alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/sofa3.jpg" class="d-block w-100"  alt="...">
