--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="width: 1600px" style="height: 800px">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="width: 1600px" style="height: 800px" class="mx-auto" >
     <div>
         <div class="carousel-inner">
             <div class="carousel-item active">
