--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 <body>
     <!-- Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="height: 600px" class="mx-auto" >
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" class="mx-auto" >
     <div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/sofa1.jpg" class="d-block w-100" alt="...">
+                <img src="img/sofa1.jpg" class="d-block w-100" style="height: 600px" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/sofa2.jpg" class="d-block w-100" alt="sofa2.jpeg">
+                <img src="img/sofa2.jpg" class="d-block w-100" style="height: 600px" alt="sofa2.jpeg">
             </div>
             <div class="carousel-item">
-                <img src="img/sofa3.jpg" class="d-block w-100" alt="...">
+                <img src="img/sofa3.jpg" class="d-block w-100" style="height: 600px" alt="...">
             </div>
         </div>
     </div>
