--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/sofa1.jpg" class="d-block w-100" style="height: 600px" alt="...">
+                <img src="img/sofa1.jpg" class="d-block w-75" class="h-75 d-inline-block"  alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/sofa2.jpg" class="d-block w-100" style="height: 600px" alt="sofa2.jpeg">
+                <img src="img/sofa2.jpg" class="d-block w-75" class="h-75 d-inline-block"  alt="sofa2.jpeg">
             </div>
             <div class="carousel-item">
-                <img src="img/sofa3.jpg" class="d-block w-100" style="height: 600px" alt="...">
+                <img src="img/sofa3.jpg" class="d-block w-75" class="h-75 d-inline-block" alt="...">
             </div>
         </div>
     </div>
