--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" class="mx-auto" >
     <div>
         <div class="carousel-inner">
+            <p class="text-center">Toko Furnitur</p>
             <div class="carousel-item active">
                 <img src="img/sofa1.jpg" class="d-block w-25" class="h-50 d-inline-block"  alt="...">
             </div>
