--- a/webserver/index.html
+++ b/webserver/index.html
@@ -9,20 +9,20 @@
 rel="stylesheet" integrity="sha384-
 EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 crossorigin="anonymous">
- <title>Web Server</title>
+ <title>Soal PG Tentang Web Design, HTML, dan CSS.</title>
  </head> 
 <body>
 
  <div class="container"> 
 
- <h1>Web Server</h1> 
+ <h1>Soal PG Tentang Web Design, HTML, dan CSS.</h1> 
 
- <p>Web server adalah sebuah software yang memberikan layanan berbasis data dan berfungsi 
-  menerima permintaan dari HTTP atau HTTPS pada klien yang dikenal dan biasanya kita kenal dengan 
-  nama web browser dan untuk mengirimkan kembali yang hasilnya dalam bentuk beberapa halaman 
-  web dan pada umumnya akan berbentuk dokumen HTML. itulah pengertian web server sebenarnya. 
-  dalam bentuk sederhana web server akan mengirim data HTML kepada permintaan web Browser 
-  sehingga akan terlihat seperti pada umumnya yaitu sebuah tampilan website. 
+ <p>Apa itu HTML?
+A) Bahasa pemrograman untuk aplikasi web
+B) Bahasa markup untuk mendesain tampilan web
+<b>C) Bahasa markup untuk membuat struktur halaman web</b>
+D) Protokol untuk mengirimkan data di web
+E) Bahasa pemrograman untuk mengelola database
  </p> 
  
   <h1>BEBERAPA APLIKASI WEB SERVER</h1> 
